fixed overflow-x problem

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body, html {
   height: 100%;
   scroll-behavior: smooth;
   font-size: 20px;
+  overflow-x: hidden;
 }
 
 @media all and (min-width: 992px) {
@@ -55,6 +56,9 @@ body, html {
     width: 10rem !important;
     height: 10rem !important;
   }
+  .section_titles {
+    font-size: 2rem;
+  }
 
 }
 
@@ -79,6 +83,7 @@ p {
   display: flex;
   align-items: center;
   flex-grow: 1;
+  max-width: 100%;
 }
 
 .landingtitle {
